add dash right list

--- a/clients/templates/clients/detail.html
+++ b/clients/templates/clients/detail.html
@@ -25,7 +25,7 @@
     </div>
     <div class="info">
         <h5 class="m-0">{{ object.full_name }}</h5>
-        <p>{{ object.user.username }}</p>
+        <p>{{ object.user.email }}</p>
     </div>
 </div>
 
