--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -8,7 +8,7 @@
     <h5 class="font-medium">Hola {{ request.user.username }},</h5>
     <h3>Bienvenido</h3>
 
-    <!-- <div class="content__wrapper">
+    <div class="content__wrapper mb-10">
         <div class="grid-dash__driver">
           <div class="card payment__now">
             <div class="icon__position">
@@ -71,8 +71,9 @@
             </div>
           </div>
 
+          {% if request.user.is_administrator %}
           <div class="card">
-            <h6>Últimos pedidos asignados</h6>
+            <h6>{{ list_right.admin_title }}</h6>
             <p>Los últimos pedidos de hoy</p>
             <div class="dash__order__list">
               <div class="dash__order__item">
@@ -87,53 +88,93 @@
               </div>
             </div>
             <div class="actions full">
-              <a href="" class="btn btn-primary">Ver todos</a>
+              <a href="{{ list_right.admin_more_path }}" class="btn btn-primary">Ver todos</a>
             </div>
           </div>
+          {% endif %}
         </div>
         <div>
-          <div class="card">
-            <h6>Últimos pedidos asignados</h6>
-            <p>Los últimos pedidos de hoy</p>
-            <div class="dash__order__list">
-              <div class="dash__order__item">
-                <div class="dash__content__wrapper">
-                  <div class="icon icon-rounded icon-warning-default">
-                    <img src="{% static 'icon/order-icon.svg' %}" alt="Icon Order">
-                  </div>
-                  <div class="dash__order__content">
-                    <div class="text-small subheading"># TRACKING CC123045245</div>
-                    <h6>Juan Rojas Licas</h6>
-                    <p>Jiron Educacion 144-170, Cercado de Lima 15416</p>
-                  </div>
+          {% if request.user.is_administrator %}
+            <div class="card">
+                <h6>{{ list_right.admin_title }}</h6>
+                <p>{{ list_right.admin_description }}</p>
+                <div class="dash__order__list">
+                    {% for client in list_right.admin_clients %}
+                    <div class="dash__order__item">
+                        <div class="dash__content__wrapper">
+                            <div class="icon icon-rounded icon-danger-default">
+                                <i class="bx bx-user-pin"></i>
+                            </div>
+                            <div class="dash__order__content">
+                                <div class="text-small subheading"># CEL {{ client.address_default.cell_phone }}</div>
+                                <h6>{{ client.full_name }}</h6>
+                                <p>{{ client.address_default.address_complete }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
-                <div class="status">
-                  <span class="badge badge-warning">PE</span>
+                <div class="actions full">
+                    <a href="{{ list_right.admin_more_path }}" class="btn btn-primary">Ver todos</a>
                 </div>
-              </div>
-              <div class="dash__order__item">
-                <div class="dash__content__wrapper">
-                  <div class="icon icon-rounded icon-warning-default">
-                    <i class="bx bx-user-pin"></i>
-                  </div>
-                  <div class="dash__order__content">
-                    <div class="text-small subheading"># TRACKING CC123045245</div>
-                    <h6>Juan Rojas Licas</h6>
-                    <p>Jiron Educacion 144-170, Cercado de Lima 15416</p>
-                  </div>
-                </div>
-                <div class="status">
-                  <span class="badge badge-warning">PE</span>
-                </div>
-              </div>
             </div>
-            <div class="actions full">
-              <a href="" class="btn btn-primary">Ver todos</a>
+            {% endif %}
+            {% if request.user.is_driver %}
+            <div class="card">
+                <h6>{{ list_right.driver_title }}</h6>
+                <p>{{ list_right.driver_description }}</p>
+                <div class="dash__order__list">
+                    {% for origin in list_right.driver_origins %}
+                    <div class="dash__order__item">
+                        <div class="dash__content__wrapper">
+                            <div class="icon icon-rounded icon-warning-default">
+                                <img src="{% static 'icon/order-icon.svg' %}" alt="Icon Order">
+                            </div>
+                            <div class="dash__order__content">
+                                <div class="text-small subheading">{{ origin.detail.get_tracking_code_text }}</div>
+                                <h6>{{ origin.detail.address_origin.full_name }}</h6>
+                                <p>{{ origin.detail.address_origin.address_complete }}</p>
+                            </div>
+                        </div>
+                        <div class="status">
+                            {% include 'details/snippets/status-short.html' with detail=origin.detail %}
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <div class="actions full">
+                    <a href="{{ list_right.driver_more_path }}" class="btn btn-primary">Ver todos</a>
+                </div>
             </div>
-          </div>
+            {% endif %}
+            {% if request.user.is_client %}
+            <div class="card">
+                <h6>{{ list_right.client_title }}</h6>
+                <p>{{ list_right.client_description }}</p>
+                <div class="dash__order__list">
+                    {% for address in list_right.client_addresses %}
+                    <div class="dash__order__item">
+                        <div class="dash__content__wrapper">
+                            <div class="icon icon-rounded icon-primary-default">
+                                <div class="bx bx-current-location"></div>
+                            </div>
+                            <div class="dash__order__content">
+                                <div class="text-small subheading">{{ address.full_name }}</div>
+                                <h6>{{ address.address }}</h6>
+                                <p>{{ address.address_city }}</p>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <div class="actions full">
+                    <a href="{{ list_right.client_more_path }}" class="btn btn-primary">Ver todas</a>
+                </div>
+            </div>
+            {% endif %}
         </div>
-    </div> -->
+    </div>
 
-    <div class="card mt-4">Pronto....</div>
+    <!-- <div class="card mt-4">Pronto....</div> -->
 
 {% endblock content %}
