--- a/authentication/templates/auth/register.html
+++ b/authentication/templates/auth/register.html
@@ -19,7 +19,7 @@
           <div id="show-password">mostrar</div>
           {% if field.errors %}
             {% for error in field.errors %}
-            <div class="text-invalid">
+            <div class="text-danger">
               {{ error }}
             </div>
             {% endfor %}
