update origins and deliveries

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -8,7 +8,7 @@
     <h5 class="font-medium">Hola {{ request.user.username }},</h5>
     <h3>Bienvenido</h3>
 
-    <div class="content__wrapper mb-10">
+    <!-- <div class="content__wrapper mb-10">
         <div class="grid-dash__driver">
           <div class="card payment__now">
             <div class="icon__position">
@@ -173,8 +173,8 @@
             </div>
             {% endif %}
         </div>
-    </div>
+    </div> -->
 
-    <!-- <div class="card mt-4">Pronto....</div> -->
+    <div class="card mt-4">Pronto....</div>
 
 {% endblock content %}
