--- a/courier_app/static/css/pages/dashboard.css
+++ b/courier_app/static/css/pages/dashboard.css
@@ -148,7 +148,9 @@
     font-size: 13px; 
 }
 @media (min-width: 768px){
-
+    .payment__now h4{
+        font-size: 25px;
+    }
 }
 @media (min-width: 1024px){
     .content__wrapper{
@@ -157,6 +159,9 @@
     .grid-dash__driver{
         grid-template-columns: 1fr 15rem;
         /* flex-direction: row; */
+    }
+    .payment__now h4{
+        font-size: 20px;
     }
     .payment__now{
         /* width: 60%; */
