Driver payment view

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -32,7 +32,7 @@
             {% include 'admin/snippets/summary-count.html' %}
           </div>
 
-          {% include 'admin/snippets/list-left.html' %}
+          <!-- {% include 'admin/snippets/list-left.html' %} -->
         </div>
         <div>
           {% include 'admin/snippets/list-right.html' %}
