--- a/orders/templates/orders/index.html
+++ b/orders/templates/orders/index.html
@@ -132,7 +132,10 @@
 </div>
 {% endblock content_head %}
 {% block content %}
-<div class="filter-list">
+<div id="orders">
+</div>
+
+<!-- <div class="filter-list">
     <a href="{% url 'orders:index' %}" class="btn btn-{% if not 'status' in request.GET %}primary{% else %}link{% endif %} btn-rounded btn-small">Todos</a>
     {% for cstatus in statuses %}
     <a href="{% url 'orders:index' %}?status={{ cstatus }}" class="btn btn-{% if status == cstatus %}primary{% else %}link{% endif %} btn-rounded btn-small">{{ cstatus.label }}</a>
@@ -204,9 +207,9 @@
                 x-show.transition.in.origin.bottom.right.scale.opacity.400ms.out.origin.top.right.scale.20="isOpenMd"
                 @click.away="isOpenMd = false">
                 {% if perms.details.view_detail %}
-                <a href="{{ detail.get_detail_path }}" class="dropdown-item-2">
+                <a href="{{ detail.get_detail_path }}?next={{ request.path }}" class="dropdown-item-2">
                     <span>Ver detalles</span>
-                    <i class='bx bx-map-pin bx-sm'></i>
+                    <i class='bx bx-show bx-sm'></i>
                 </a>
                 {% endif %}
                 {% if perms.details.view_trackingorder %}
@@ -236,10 +239,10 @@
                 <div class="form-modal">
                     <div class="options">
                         {% if perms.details.view_detail %}
-                        <a href="{{ detail.get_detail_path }}" class="option-item">
+                        <a href="{{ detail.get_detail_path }}?next={{ request.path }}" class="option-item">
                             <span>Ver detalles</span>
                             <div class="icon ">
-                                <i class='bx bx-map-pin bx-sm'></i>
+                                <i class='bx bx-show bx-sm'></i>
                             </div>
                         </a>
                         {% endif %}
@@ -309,7 +312,8 @@
         </p>
     </div>
     {% endif %}
-</div>
+</div> -->
+
 {% endblock content %}
 {% block scripts %}
 <script>
@@ -361,4 +365,13 @@
         form.client_id.value = client.pk;
     }
 </script>
+<!-- <script src="https://unpkg.com/react@17/umd/react.development.js"></script> -->
+<!-- <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script> -->
+<!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
+<!-- <script type="text/babel">
+     ReactDOM.render(
+        <h1>Hello, world!</h1>,
+        document.getElementById('orders')
+      );
+</script> -->
 {% endblock scripts %}
