--- a/templates/layouts/admin.html
+++ b/templates/layouts/admin.html
@@ -53,5 +53,6 @@
       })()
   </script>
   <script src="{% static 'js/main.js' %}"></script>
+  <script src="{% static 'frontend/main.js' %}"></script>
   </body>
 </html>
